เพิ่มพื้นหลัง index

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head></head>
-<body>
+<body background sre="https://wallpaper.campus-star.com/app/uploads/2018/11/photo-wall09.jpg">
 <h1> Piya06phorn Website
 </body>
 </html>
