--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
 <html>
-<head></head>
-<body background sre="https://wallpaper.campus-star.com/app/uploads/2018/11/photo-wall09.jpg">
-<h1> Piya06phorn Website
+<head></head><link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+<body >
+    <nav class="navbar navbar-dark bg-dark">
+        <!-- Navbar content -->
+      </nav>
+      
+      <nav class="navbar navbar-dark bg-primary">
+        <!-- Navbar content -->
+      </nav>
+      
+      <nav class="navbar navbar-light" style="background-color: #e3f2fd;">
+        <!-- Navbar content -->
+      </nav>
 </body>
 </html>
